google map api key set to os env

--- a/map.html
+++ b/map.html
@@ -172,7 +172,7 @@
             }
         </script>
         <script
-            src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key=REPLACE_API_KEY&amp;callback=initMap"
+            src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key={{GOOGLE_MAP_API_KEY}}&amp;callback=initMap"
             async defer></script>  <!-- https://developers.google.com/maps/documentation/javascript/get-api-key //-->
     </head>
     <body>
